<resources>
    <string name="app_name">VocaNote</string>
    <string name="add_group">Add Group</string>
    <string name="groups">Groups</string>
    <string name="empty_group">Group is empty</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="change_name_of_group">Change name of group</string>
    <string name="nogroups">No Groups</string>
    <string name="new_vocanote">new VocaNote</string>
    <string name="new_group">new Group</string>
    <string name="words">Words</string>
    <string name="create_new_vocanote">Create new VocaNote</string>
    <string name="new_word">New word:</string>
    <string name="write_new_word">- write new word</string>
    <string name="write_translation">- write translation</string>
    <string name="translation">Translation:</string>
    <string-array name="spinner_values">
        <item>English</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>French</item>
        <item>German</item>
    </string-array>
    <string name="delete_group">Do you want to delete this group</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="search_hint">Your word</string>
    <string name="vocanotes">Vocanotes</string>
    <string name="delete_vocanote">Delete VocaNote</string>
    <string name="delete_vocanote_alert_dialog">Delete this VocaNote?</string>
    <string name="change_vocanote">Change VocaNote</string>
    <string name="search">Search</string>
    <string name="group_was_added">Group %1$s was added</string>
    <string name="group_already_exists">Group %1$s already exists</string>
    <string name="the_name_of_group">The name of group</string>
    <string name="save_vocanote">Save VocaNote</string>
    <string name="vocanote_was_deleted">VocaNote was deleted</string>
    <string name="vocanote_was_edited">VocaNote was edited</string>
    <string name="transfer_into_studied">Transfer into Studied</string>
    <string name="remove_from_studied">Remove from Studied</string>
    <string name="vocanote_was_moved_into_studied">VocaNote was moved into Studied</string>
    <string name="vocanote_was_removed_from_studied">VocaNote was removed from Studied</string>
    <string name="find_a_par">Find a par</string>
    <string name="training">Training</string>
    <string name="translate_it">Translate it!</string>
    <string name="communication_and_info">Communication and info</string>
    <string name="studied_vocanotes">Studied VocaNotes</string>
    <string name="share">Share</string>
    <string name="write_to_us">Write to us</string>
    <string name="instructions">Instructions</string>
    <!--Change the address of application on Google's Playmarket-->
    <string name="share_message">Do you want to learn new language? - With our application
    it is so simple! github.com/LAHomieJob/VocaNote</string>
    <string name="aap_feedback_info">
        App Name: %1$s %nApp Version: %2$s %nOS Name: Android %nOS Version: %3$d %nDevice: %4$s %nLanguage: %5$s %n%nFeedback:%n
    </string>
    <string name="send_feedback">Send feedback</string>
    <string name="VocaNote_application_feedback">VocaNote application feedback</string>
    <string name="mailto">mailto: aleksey.fedorovjob@mail.ru</string>
    <!--Change instruction-->
    <string name="instructions_detail">
        <b>Welcome to VocaNote!</b>\n\nVocaNote is my first Android pet-project. The practical value
        of this app is to help people to learn foreign languages. With this app you can write
        new words into multiple custom vocabularies(Groups) and then through couple built-in games practice
        and memorize them.</string>
</resources>
